kubernetes/apps/observability/grafana/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Grafana"
    homepage.shamubernetes.com/description: "Metrics, logs, and dashboards"
    homepage.shamubernetes.com/group: "Observability"
    homepage.shamubernetes.com/order: "10"
    homepage.shamubernetes.com/favorite: "true"
    homepage.shamubernetes.com/icon: "dashboard-icons:grafana"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "grafana.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
